@@ -1,5 +1,5 @@
 DIST ttf-fifthhorseman-dkg-handwriting-0.009.tar.lzma 127051 SHA256 05012e21e91f3128349baa67695e78c7a911c55dd87ab597e853afc78b84f687 SHA512 1e682ed79ae0113fcd6817e8651531a133a3ba25ff274f2b0b55d5ac5a9049a9957ffe253e12536e726409cf4f77570673b5f7e5e3fb9059c0152d3c4c988c3c WHIRLPOOL 3b69710522105a7518dc455408e6978baae15f4291958f0e88d9866b5c91141daa17ac7dcecd78b46af21bdcecadbb5e7ed3c3edd5a21fff78ed526db2cb4c8e
 DIST ttf-fifthhorseman-dkg-handwriting-TTF-0.009.tar.lzma 178131 SHA256 e4ab875a794efb1a58615a6ed81a5b81ca833eb71510027418ceed8d5a849e2a SHA512 0793ad99d24b869f17e424a9e4e2400ed11a959eb2d0574d4da263359b32aeaadc51c4f909dfab96380deae5ca5b7ce927bfb49da808bf4abfa50c0b4c4ef985 WHIRLPOOL 009ed2b16cd13a8bda6e1ca2805cec2e5ea6ac4d1aec4c26c337ef41d508804bcc73c11cc726e8bc332c74998e1ea7bbe09ce2e8fc35434b8d249bf8034cae9f
-EBUILD ttf-fifthhorseman-dkg-handwriting-0.009.ebuild 1075 SHA256 85fe16915160fb0afbbbb192766cfb13ebb461da210d449b9f364b60a218f5d1 SHA512 2f547b4a478dcda87ccbb927ca719fdf5786d563b95f5d09636960a7c0e469beaca934c326307fbfb89caea65934dc5782697a8b1b6644a95f56cd58f90e8a57 WHIRLPOOL 6dd1d71ff9bf72b7b0b06b870bff2acb7a1552b652232273ce4838947c06a64e4695d6c9149d81a161656d6e2ac8ca20f187cc256863dac317d903b44045f432
-MISC ChangeLog 360 SHA256 15c84353767318f6ee0ef4c7a0a57bd1d5f4867bf90af71d9b36d03f9a5b748e SHA512 bb7e0e3d78b6d63360c592c574d00ad791eeb9a7c720c2379e7123c96721e718527884514f769fbec68f05527f2673818003074d76078c33a3f9a167c615128a WHIRLPOOL c1c54c3896a465af1a937d9fffa2a438a6e4c073e4fec614ac86182e18e98b28bc3679d0727f7674a24a1549366198243517d47f83c8ec2a6159fe6f6bb6c7d4
+EBUILD ttf-fifthhorseman-dkg-handwriting-0.009.ebuild 703 SHA256 18b88c0d93ca7cf3bd8a9a8309f784f914af25dc883dcd4c26b669508172bdd6 SHA512 8e724a5f1be9ad8f1a1029600d3d2246d79d6c4b448a28f9fede28a2fdcac0d7701b2676aa8f34f1637e6c89644aba3baf563387715c62a88095aab26936c9fc WHIRLPOOL 7d143b7025f3ea0a8e281643a47ef33d27bd545d34e5923e2d2fca4c1bb9ee8d3e718b76fe645756e128239a2c04cee69b56b209e6e1b57296ac96b1d4822eb9
+MISC ChangeLog 497 SHA256 6af69b0f239d3a9732ccb5b210602441ae60c686985b44f7e9c8a8a3ac975923 SHA512 82248c4a40f1bc62eb86286da845cdca5e5f441e36d9b4a43da6533618ba6037ca4fb2b20d113bea9c59ae7e63b566d91cc235d19c7caa996342d99cf9c2e74a WHIRLPOOL 46543a1dd73d3d370fa4947f87845fda03f6a8533eef7d1e748f6cd6f48ee4863958f48854825375876fda61b0948c4ec441945c6c0036462eeac11a719a2d9b
 MISC metadata.xml 344 SHA256 0a0f1af25ec378957750e0ee591670e5e69a47e645b00ea089983df5de565488 SHA512 77701c07c3bf24b4b008195c6e3bfdc8939a0f11deafa0f01f4873532e090b09df9c986ab1ca2bd098de83233b5f26d18db7456cb51b1d1249ba03b43d0e2871 WHIRLPOOL 4affbf0b0d730df29572cd63f2d40414a7c677ea7bdfd64954191619b40cdcbe0365232f32b048970f3563f83ce0afb0816fd9925eb7274041d217b3a556083d
